--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.17.0
 click==8.1.7
 cryptography==43.0.0
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -11,4 +12,6 @@ pycparser==2.22
 pyOpenSSL==24.2.1
 pytz==2024.1
 six==1.16.0
+SQLAlchemy==2.0.32
+typing_extensions==4.12.2
 Werkzeug==3.0.3
