--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 pycparser==2.22
 pyOpenSSL==24.2.1
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.32.3
 six==1.16.0
